--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+    <!--BootStrap--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!--Icones--><script src="https://kit.fontawesome.com/6dc60f8408.js" crossorigin="anonymous"></script>
     <title>Work plin</title>
   </head>
   <body>
-    Before you get start, check out README.md<br />
-    Antes de começar, verifique o README.md
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><h1>Work<strong>plin</strong></h1></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link" href="#">Places</a>
+              <a class="nav-link" href="#">Contact</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!-- <h1>Work <strong>plin</strong></h1>
+      <nav>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Places</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav> -->
+    </header>
+    <main>
+      <section class="container-inicial">
+        <img src="./img/illustration.png" alt="work plin" >
+        <h2><strong>Everything</strong> in one click</h2>
+      </section>
+
+       <h2 class="find">Find your <strong>plin</strong>!</h2>
+      <section class="find-plin">
+       
+        <ul>
+          <li> <button id="how">How many people ? </button> </li>
+          <li><button id="for">For how long ? </button></li>
+          <li><button id="your">Your best e-mail ! </button></li>
+        </ul>
+        <div id="description">
+          <i class="fas fa-times-circle"></i>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo explicabo ullam doloremque alias aspernatur distinctio neque, deserunt tenetur at id deleniti nihil assumenda quae recusandae dolorem, perspiciatis nesciunt aliquam odit.
+         </p>
+        </div>
+      </section>
+      <div class="submit">
+        <button >Submit</button>
+      </div>    
+    </main>
+    <footer>
+      <ul>
+        <li> <a href="">Blog</a> </li>
+        <li><a href="">Join us!</a></li>
+        <li> <a href="">Help</a> </li>
+      </ul>
+      <h3>Work plin</h3>
+    </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
